# gamelibs-glfw

./: Makefile  meson.build
docs/: intro.dox
include/GLFW/: glfw3.h  glfw3native.h
msvc/: GLFW.vcxproj  GLFW.vcxproj.filters
src/: cocoa_monitor.m  cocoa_platform.h  cocoa_window.m  context.c  egl_context.c  init.c  internal.h  monitor.c  null_platform.h  null_window.c  wgl_context.c  win32_init.c  win32_platform.h  win32_window.c  window.c  wl_platform.h  wl_window.c  x11_init.c  x11_platform.h  x11_window.c
